--- a/BuzzTrack/app/src/main/AndroidManifest.xml
+++ b/BuzzTrack/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".change_drink" />
+        <activity android:name=".Settings" />
     </application>
 
 </manifest>
