Changed some colors, and the manifest to force portrait mode.

--- a/BuzzTrack/app/src/main/AndroidManifest.xml
+++ b/BuzzTrack/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Home"
          android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
-        <activity android:name=".change_drink" />
-        <activity android:name=".Settings" />
+        <activity android:name=".change_drink"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Settings"
+            android:screenOrientation="portrait"/>
+
     </application>
 
 </manifest>
