--- a/BuzzTrack/app/src/main/AndroidManifest.xml
+++ b/BuzzTrack/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+
         <activity android:name=".Home"
+
          android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
