--- a/BuzzTrack/app/build.gradle
+++ b/BuzzTrack/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
     defaultConfig {
-        applicationId "com.example.elliot.buzztrack"
+        applicationId "com.BuzzTrack.elliot.buzztrack"
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 1
